# eminentAI

./: .gitignore  README.md  pyproject.toml  r2.py  r3.py  reviews.json  reviews.py  scrape_and_summarize_reviews.py  summary.txt  test.py
lambda/: lambda_function.py  requirements.txt
